--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           href="https://www.frontendmentor.io?ref=challenge"
           target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="">Durodola Damilola</a>.
+        >. Coded by <a href="https://www.linkedin.com/in/damilola-durodola-996071393/">Durodola Damilola</a>.
       </div>
     </footer>
   </body>
